v0.8.6 - Ongoing
================

- Rewrote part of the touch screen calibration code to get more
  accurate results.  Each point is now tested twice and the
  results are averaged.  Values beyond a certain limit are also
  rejected to ignore wacky readings.
- Added a preliminary PN532 (NFC/RFID) driver.  Currently UART
  only, and only allows simple commands to be sent and responses
  are fed out to the console via printf.  Will be elaborated
  and expanded in the near future.
- Added a preliminary ILI9328 driver while waiting for the
  actual LCDs to arrive, though it seems to be almost identical
  to the ILI9325.
- Cleaned up the ILI9325 TFT LCD driver a bit, adding a proper
  enum for the commands, etc.
  

v0.8.5 - 7 March 2011
=====================

- Fixed a problem with GDB script when deploying firmware
  with Segger J-Link in CodeLite.  Code will now deploy
  and start executing properly when F5 is pressed (assuming
  the Segger GDB Server software is running in the background).
- Interrupts are now disabled while feeding the watchdog as per
  a warning in the usermanual.
- Changed fonts for TTF LCDs.  DejaVu Sans 9 is now used by default
  in the LPC1343 Code Base.  The following open source fonts have
  been converted using The Dot Factory (see '/tools/dotfactory') and
  can be found in '/drivers/lcd/tft/fonts':
  
      FONT NAME                         WIDTH
      -------------------------------   ----------
    - Bitstream Vera Mono 9             Fixed (8)
    - Bitstream Vera Mono 9 Bold        Fixed (8)
    - Bitstream Vera Mono 11            Fixed (9)
    - Bitstream Vera Mono 11 Bold       Fixed (9)
    - DejaVu Sans 9                     Variable
    - DejaVu Sans 9 Bold                Variable
    - DejaVu Sans Condensed 9           Variable
    - DejaVu Sans Mono 8                Fixed (8)
    - DejaVu Sans Mono 8 Bold           Fixed (8)
    
- Modified projectconfig.h to select the target board and configure