@@ -1,6 +1,8 @@
 v0.8.6 - Ongoing
 ================
 
+- Added an 'lcd' folder to 'tools/examples' showing how to use
+  the generic lcd drawing routines, the touch-screen, etc.
 - Rewrote part of the touch screen calibration code to get more
   accurate results.  Each point is now tested twice and the
   results are averaged.  Values beyond a certain limit are also
